[package]
name = "{{ R_NAME }}"
version = "0.1.0"
description = "{{ R_DESC }}"
authors = ["{{ R_AUTHOR }}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = "s"
panic = "abort"
debug = false
